<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="number"></string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mult">X</string>
    <string name="div">/</string>
    <string name="answer"></string>
    
    <color name="grey">#7D7D7D</color>
    <color name="white">#FFFFFF</color>

</resources>
